--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
     <script src='./scripts/load_data_util.js' async></script>
     <script>
-        $(document).ready(function {
+        $(document).ready(function ()
             loadData("INDEX");
         });
     </script>
