--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
-    <script src='./scripts/load_data_util.js' async></script>
+    <script src='./scripts/load_data_util.js'></script>
     <script>
-        $(document).ready(function ()
+        $(document).ready(function (){
             loadData("INDEX");
         });
     </script>
